# corelia

./: .gitignore  CHANGELOG.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture.md  competitive-advantage.md  datasets.md  index.md  overview.md  research-insights.md  security-compliance.md
docs/stylesheets/: extra.css
training/: .env.example  __init__.py
training/configs/: config_mistral_7B.yaml
training/scripts/: deploy_model.py  evaluate_model.py  quick_test.py  train_mistral.py
training/services/: __init__.py  dataset_loader.py  evaluator.py  model_saver.py  model_trainer.py
training/templates/: model_readme_template.md
training/utils/: __init__.py  config.py  logging.py  metrics.py
